--- a/client/src/app/global.css
+++ b/client/src/app/global.css
@@ -11,10 +11,10 @@ body {
   --color-card-foreground: hsl(20 14.3% 4.1%);
   --color-popover: hsl(0 0% 100%);
   --color-popover-foreground: hsl(20 14.3% 4.1%);
-  --color-primary: hsl(47.9 95.8% 53.1%);
-  --color-primary-foreground: hsl(26 83.3% 14.1%);
-  --color-secondary: hsl(60 4.8% 95.9%);
-  --color-secondary-foreground: hsl(24 9.8% 10%);
+  --color-primary: #F74A21;
+  --color-primary-foreground: #ffffff;
+  --color-secondary: #31DBBA;
+  --color-secondary-foreground: #0a0a0a;
   --color-muted: hsl(60 4.8% 95.9%);
   --color-muted-foreground: hsl(25 5.3% 44.7%);
   --color-accent: hsl(60 4.8% 95.9%);
@@ -50,10 +50,10 @@ body {
   --color-card-foreground: hsl(60 9.1% 97.8%);
   --color-popover: hsl(20 14.3% 4.1%);
   --color-popover-foreground: hsl(60 9.1% 97.8%);
-  --color-primary: hsl(47.9 95.8% 53.1%);
-  --color-primary-foreground: hsl(26 83.3% 14.1%);
-  --color-secondary: hsl(12 6.5% 15.1%);
-  --color-secondary-foreground: hsl(60 9.1% 97.8%);
+  --color-primary: #F74A21;
+  --color-primary-foreground: #ffffff;
+  --color-secondary: #31DBBA;
+  --color-secondary-foreground: #0a0a0a;
   --color-muted: hsl(12 6.5% 15.1%);
   --color-muted-foreground: hsl(24 5.4% 63.9%);
   --color-accent: hsl(12 6.5% 15.1%);
